# nostr-chess

./: .gitignore  .gitlab-ci.yml  CHANGELOG  Cargo.toml  LICENSE  README.md  webdriver.json
annotator/: Cargo.toml  index.html
annotator/public/: manifest.json
annotator/public/language/: en.json
annotator/src/: lib.rs  main.rs  router.rs
annotator/src/components/: drawer.rs  expert.rs  mod.rs  modal.rs  rookie.rs  user_profile_card_standalone.rs
annotator/src/contexts/: configs.rs  language.rs  live_game.rs  mod.rs
annotator/src/pages/: home.rs  key_recovery.rs  login.rs  mod.rs  relay_management.rs  review.rs
annotator/styles/: input.css  output.css
bunker/: Cargo.toml  index.html
bunker/src/: app.rs  lib.rs  login.rs  router.rs
bunker/src/components/: mod.rs  notifications.rs  profile.rs
bunker/src/contexts/: live_game.rs  mod.rs
bunker/src/pages/: annotate.rs  detail.rs  games.rs  home.rs  mod.rs  search.rs  settings.rs
bunker/styles/: input.css  output.css
chessboard-js/: Cargo.toml
chessboard-js/src/: configs.rs  lib.rs
rooky-core/: Cargo.toml
rooky-core/src/: errors.rs  game.rs  headers.rs  idb.rs  lib.rs  openings.rs  pgn_standards.rs
shady-minions/: .gitignore  Cargo.toml
shady-minions/shady-test/: Cargo.toml  Trunk.toml  index.html  input.css
shady-minions/shady-test/src/: main.rs
shady-minions/src/: button.rs  card.rs  checkbox.rs  drawer.rs  dropdown.rs  form.rs  input.rs  label.rs  lib.rs  modal.rs  popover.rs  select.rs  slider.rs  switch.rs  tabs.rs  textarea.rs
static_resources/language/: en.json
