[package]
name = "annotator"
version = "0.1.0"
edition = "2021"

[dependencies]
rooky-core.workspace = true
chessboard-js = { version = "0.1.0", path = "../chessboard-js" }
chrono.workspace = true
gloo = "0.11.0"
lucide-yew = "1.1.0"
pgn-reader.workspace = true
shakmaty.workspace = true
wasm-bindgen-test.workspace = true
web-sys = { workspace = true, features = ["HtmlFormElement", "HtmlSelectElement", "RadioNodeList", "TouchList","Touch", "CssStyleDeclaration"] }
yew = { version = "0.21.0", features = ["csr"] }
nostr-minions.workspace = true
shady-minions.workspace = true
yew-router = "0.18.0"
serde = "1.0.219"
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.140"
wasm-bindgen = "0.2"

